# AIOS

./: .gitignore  README.md
agent-hub/cognitive-weaver-file-monitor/: README.md  pyproject.toml
agent-hub/cognitive-weaver-file-monitor/cognitive_weaver_file_monitor/: __init__.py  main.py
agent-hub/cognitive-weaver-file-rewriter/: README.md  pyproject.toml
agent-hub/cognitive-weaver-file-rewriter/cognitive_weaver_file_rewriter/: main.py
agent-hub/cognitive-weaver-keyword-extractor/: README.md  pyproject.toml
agent-hub/cognitive-weaver-keyword-extractor/cognitive_weaver_keyword_extractor/: main.py
agent-hub/cognitive-weaver-link-parser/: README.md  pyproject.toml
agent-hub/cognitive-weaver-link-parser/cognitive_weaver_link_parser/: main.py
examples/cognitive-weaver/: .env.example  DOCKER.md  Dockerfile  README.md  cognitive_weaver_dataflow.yml  cognitive_weaver_simple.yml  deploy.sh  docker-compose.yml  docker-entrypoint.sh  test_setup.py
