[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cognitive-weaver-file-monitor"
version = "0.1.0"
description = "Cognitive Weaver文件监控Agent - 监控Obsidian vault中的Markdown文件变化"
authors = ["Cognitive Weaver Team"]
readme = "README.md"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^3.0.0"

[tool.poetry.scripts]
cognitive-weaver-file-monitor = "cognitive_weaver_file_monitor.main:main"
